--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bookshelf": "^0.10.2",
     "express": "^4.14.0",
     "knex": "^0.12.6",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.0",
     "winston": "^2.2.0"
   },
