--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "knex": "^0.12.6",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
+    "when": "^3.7.7",
     "winston": "^2.2.0"
   },
   "devDependencies": {},
